--- a/Untitled Folder/Untitled.ipynb
+++ b/Untitled Folder/Untitled.ipynb
@@ -2,8 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "714e7184",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Standard Imports\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from datetime import datetime\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "import csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f6557f2a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -25,7 +41,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
