--- a/Untitled Folder/Untitled.ipynb
+++ b/Untitled Folder/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "714e7184",
    "metadata": {},
    "outputs": [],
@@ -13,13 +13,14 @@
     "from datetime import datetime\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "import csv"
+    "import csv\n",
+    "import json"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f6557f2a",
+   "id": "32863883",
    "metadata": {},
    "outputs": [],
    "source": []
