updated with weighted data

--- a/changing_data/adjusting_data.ipynb
+++ b/changing_data/adjusting_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "714e7184",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "15be3894",
    "metadata": {},
    "outputs": [
@@ -239,7 +239,7 @@
        "[5 rows x 324 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "b67852a6",
    "metadata": {},
    "outputs": [
@@ -362,7 +362,7 @@
        "4            6.34             4.21       3.75  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -407,36 +407,336 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a3ffcc1a",
+   "metadata": {},
+   "source": [
+    "## Weighting the Data by Population\n",
+    "\n",
+    "- get the total population of orange county\n",
+    "- divide each zcta region's population by the total population of orange county\n",
+    "- this gives us the weight for each region\n",
+    "- multiply the weight for each region by the stat we want to use\n",
+    "- we now have data that is weighted by population for each zcta region"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "151bae0d",
+   "execution_count": 4,
+   "id": "303c9e97",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "      zcta  tot_pop_zcta  unemployed_civ  no_vehicle  no_school_job  \\\n",
-      "150  92708         56811            5.45        3.62           2.55   \n",
-      "151  92708         56811            5.45        3.62           2.55   \n",
-      "\n",
-      "     no_food_stamps  distance_clinic  uninsured  \n",
-      "150             7.8             2.48       4.32  \n",
-      "151             7.8             2.15       4.32  \n"
+      "3167000\n"
      ]
     }
    ],
    "source": [
-    "search_value = 92708\n",
-    "result = picked_data[picked_data['zcta'] == search_value]\n",
-    "\n",
-    "print(result)"
+    "# total oc pop\n",
+    "print(ocPop)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "7fc56c65",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "picked_data['weights'] = picked_data['tot_pop_zcta'] / ocPop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "eaff066c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>zcta</th>\n",
+       "      <th>tot_pop_zcta</th>\n",
+       "      <th>unemployed_civ</th>\n",
+       "      <th>no_vehicle</th>\n",
+       "      <th>no_school_job</th>\n",
+       "      <th>no_food_stamps</th>\n",
+       "      <th>distance_clinic</th>\n",
+       "      <th>uninsured</th>\n",
+       "      <th>weights</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>90620</td>\n",
+       "      <td>46228</td>\n",
+       "      <td>4.42</td>\n",
+       "      <td>2.87</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>7.08</td>\n",
+       "      <td>3.19</td>\n",
+       "      <td>6.13</td>\n",
+       "      <td>0.014597</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>90620</td>\n",
+       "      <td>46228</td>\n",
+       "      <td>4.42</td>\n",
+       "      <td>2.87</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>7.08</td>\n",
+       "      <td>3.39</td>\n",
+       "      <td>6.13</td>\n",
+       "      <td>0.014597</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>90621</td>\n",
+       "      <td>35448</td>\n",
+       "      <td>4.67</td>\n",
+       "      <td>5.10</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>6.19</td>\n",
+       "      <td>3.48</td>\n",
+       "      <td>9.89</td>\n",
+       "      <td>0.011193</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>90621</td>\n",
+       "      <td>35448</td>\n",
+       "      <td>4.67</td>\n",
+       "      <td>5.10</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>6.19</td>\n",
+       "      <td>3.89</td>\n",
+       "      <td>9.89</td>\n",
+       "      <td>0.011193</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>90623</td>\n",
+       "      <td>15624</td>\n",
+       "      <td>2.71</td>\n",
+       "      <td>6.29</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>6.34</td>\n",
+       "      <td>4.21</td>\n",
+       "      <td>3.75</td>\n",
+       "      <td>0.004933</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    zcta  tot_pop_zcta  unemployed_civ  no_vehicle  no_school_job  \\\n",
+       "0  90620         46228            4.42        2.87            2.5   \n",
+       "1  90620         46228            4.42        2.87            2.5   \n",
+       "2  90621         35448            4.67        5.10            0.0   \n",
+       "3  90621         35448            4.67        5.10            0.0   \n",
+       "4  90623         15624            2.71        6.29            0.0   \n",
+       "\n",
+       "   no_food_stamps  distance_clinic  uninsured   weights  \n",
+       "0            7.08             3.19       6.13  0.014597  \n",
+       "1            7.08             3.39       6.13  0.014597  \n",
+       "2            6.19             3.48       9.89  0.011193  \n",
+       "3            6.19             3.89       9.89  0.011193  \n",
+       "4            6.34             4.21       3.75  0.004933  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "picked_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "4ef159a9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "weighted_data = pd.DataFrame({})\n",
+    "weighted_data['zcta'] = picked_data['zcta']\n",
+    "weighted_data['w_umemployed'] = picked_data['unemployed_civ'] * picked_data['weights'] * 100\n",
+    "weighted_data['w_no_vehicle'] = picked_data['no_vehicle'] * picked_data['weights'] * 100\n",
+    "weighted_data['w_no_school_job'] = picked_data['no_school_job'] * picked_data['weights'] * 100\n",
+    "weighted_data['w_no_food_stamps'] = picked_data['no_food_stamps'] * picked_data['weights'] * 100\n",
+    "weighted_data['w_distance_clinic'] = picked_data['distance_clinic'] * picked_data['weights'] * 100\n",
+    "weighted_data['w_uninsured'] = picked_data['uninsured'] * picked_data['weights'] * 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "dca58634",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>zcta</th>\n",
+       "      <th>w_umemployed</th>\n",
+       "      <th>w_no_vehicle</th>\n",
+       "      <th>w_no_school_job</th>\n",
+       "      <th>w_no_food_stamps</th>\n",
+       "      <th>w_distance_clinic</th>\n",
+       "      <th>w_uninsured</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>90620</td>\n",
+       "      <td>6.451776</td>\n",
+       "      <td>4.189276</td>\n",
+       "      <td>3.649195</td>\n",
+       "      <td>10.334520</td>\n",
+       "      <td>4.656373</td>\n",
+       "      <td>8.947826</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>90620</td>\n",
+       "      <td>6.451776</td>\n",
+       "      <td>4.189276</td>\n",
+       "      <td>3.649195</td>\n",
+       "      <td>10.334520</td>\n",
+       "      <td>4.948308</td>\n",
+       "      <td>8.947826</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>90621</td>\n",
+       "      <td>5.227097</td>\n",
+       "      <td>5.708393</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>6.928422</td>\n",
+       "      <td>3.895139</td>\n",
+       "      <td>11.069805</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>90621</td>\n",
+       "      <td>5.227097</td>\n",
+       "      <td>5.708393</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>6.928422</td>\n",
+       "      <td>4.354049</td>\n",
+       "      <td>11.069805</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>90623</td>\n",
+       "      <td>1.336945</td>\n",
+       "      <td>3.103093</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>3.127760</td>\n",
+       "      <td>2.076951</td>\n",
+       "      <td>1.850016</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    zcta  w_umemployed  w_no_vehicle  w_no_school_job  w_no_food_stamps  \\\n",
+       "0  90620      6.451776      4.189276         3.649195         10.334520   \n",
+       "1  90620      6.451776      4.189276         3.649195         10.334520   \n",
+       "2  90621      5.227097      5.708393         0.000000          6.928422   \n",
+       "3  90621      5.227097      5.708393         0.000000          6.928422   \n",
+       "4  90623      1.336945      3.103093         0.000000          3.127760   \n",
+       "\n",
+       "   w_distance_clinic  w_uninsured  \n",
+       "0           4.656373     8.947826  \n",
+       "1           4.948308     8.947826  \n",
+       "2           3.895139    11.069805  \n",
+       "3           4.354049    11.069805  \n",
+       "4           2.076951     1.850016  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "weighted_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "0030682b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "json_obj = weighted_data.to_json(orient='records', indent=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "56a23db6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('weighted_sdoh_data.json', 'w') as f:\n",
+    "    f.write(json_obj)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f451853",
+   "id": "198b072a",
    "metadata": {},
    "outputs": [],
    "source": []
