fixed some data stuff
- distance data

--- a/changing_data/adjusting_data.ipynb
+++ b/changing_data/adjusting_data.ipynb
@@ -11,8 +11,6 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "from datetime import datetime\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
     "import csv\n",
     "import json"
    ]
@@ -590,7 +588,7 @@
     "weighted_data['w_no_vehicle'] = picked_data['no_vehicle'] * picked_data['weights'] * 100\n",
     "weighted_data['w_no_school_job'] = picked_data['no_school_job'] * picked_data['weights'] * 100\n",
     "weighted_data['w_no_food_stamps'] = picked_data['no_food_stamps'] * picked_data['weights'] * 100\n",
-    "weighted_data['w_distance_clinic'] = picked_data['distance_clinic'] * picked_data['weights'] * 100\n",
+    "weighted_data['distance_clinic'] = picked_data['distance_clinic']\n",
     "weighted_data['w_uninsured'] = picked_data['uninsured'] * picked_data['weights'] * 100"
    ]
   },
